--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reach/tabs": "^0.15.0",
     "@reach/tooltip": "^0.15.0",
     "@reach/visually-hidden": "^0.15.0",
+    "@reduxjs/toolkit": "^1.6.0",
     "bootstrap": "^5.0.1",
     "codegen.macro": "^4.1.0",
     "debounce-fn": "^4.0.0",
@@ -31,6 +32,7 @@
     "react-icons": "^4.2.0",
     "react-query": "2.1.1",
     "react-query-devtools": "2.3.3",
+    "react-redux": "^7.2.4",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^4.0.3",
